<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_alert"
                android:text="@string/sure_text"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/conf_no_button"
                android:layout_below="@+id/text_alert"

                android:text="@string/no_text"
                android:background="#C06C84"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/conf_yes_button"
                android:text="@string/yes_text"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text_alert"
                android:background="#C06C84"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>